Fixed cta overflow

--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,7 @@ body {
 
 .cta {
   position: relative;
+  overflow-x: hidden;
 }
 
 @media (min-width: 2000px) {
